[Refactor UI] finish UI Refactor

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,37 +63,40 @@
 
     <TextView
         android:id="@+id/main_activity_FAB_tm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="112dp"
+        android:layout_height="42dp"
         android:background="@drawable/fab_sub"
         android:text="테마 만들기"
         android:textSize="16dp"
         android:textColor="@color/black"
-        android:paddingVertical="9dp"
-        android:paddingHorizontal="18dp"
+        android:clickable="true"
         android:gravity="center"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/main_activity_FAB_st"
+        android:layout_marginBottom="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:visibility="visible"/>
+        android:visibility="invisible"
+        android:focusable="true" />
 
     <TextView
         android:id="@+id/main_activity_FAB_st"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="96dp"
+        android:layout_height="42dp"
         android:background="@drawable/fab_sub"
+
         android:text="문장 쓰기"
         android:textSize="16dp"
         android:textColor="@color/black"
-        android:paddingVertical="9dp"
-        android:paddingHorizontal="18dp"
         android:gravity="center"
+        android:clickable="true"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="19dp"
+        app:layout_constraintBottom_toTopOf="@id/main_activity_FAB_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:visibility="visible"/>
+        android:visibility="invisible"
+        android:focusable="true" />
 
 
 
