--- a/app/src/main/res/layout/activity_theme_writing_sentence_finish.xml
+++ b/app/src/main/res/layout/activity_theme_writing_sentence_finish.xml
@@ -22,18 +22,19 @@
         android:text="문장이 등록되었습니다!"
         android:textColor="@color/black"
         android:textStyle=""
-        android:textSize="19sp"
+        android:textSize="19dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/theme_writing_sentence_finish_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="몽글이님의 문장으로\n몽글이 더욱 풍부해졌어요!"
         android:gravity="center"
         android:textColor="@color/very_light_pink_two"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:layout_marginTop="392dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +48,7 @@
         android:gravity="center"
         android:text="문장 확인하러가기"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:layout_marginTop="476dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +62,7 @@
         android:gravity="center"
         android:text="메인으로 돌아가기"
         android:textColor="@color/soft_green"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:layout_marginTop="535dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
