--- a/app/src/main/res/layout/writing_theme_finish.xml
+++ b/app/src/main/res/layout/writing_theme_finish.xml
@@ -38,11 +38,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
     <TextView
+        android:id="@+id/writing_theme_finish_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="최대 140자까지 입력 가능하며, 책의 문장을\n
-임의로 변형하지 않게 주의해주세요!"
+        android:text="몽글이님의 테마를 의미있는 문장으로\n
+채워보는 건 어떨까요?"
         android:textSize="16dp"
         android:textColor="@color/very_light_pink_two"
         android:layout_marginTop="389dp"
@@ -60,7 +61,7 @@
         android:gravity="center"
         android:text="이 테마에 문장 쓰러가기"
         android:textColor="@color/white"
-        android:textSize="17dp"
+        android:textSize="16dp"
         android:textAlignment="center"
         android:layout_marginTop="483dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -76,7 +77,7 @@
         android:gravity="center"
         android:text="메인으로 돌아가기"
         android:textColor="@color/soft_green"
-        android:textSize="17dp"
+        android:textSize="16dp"
         android:textAlignment="center"
         android:layout_marginTop="542dp"
         app:layout_constraintTop_toTopOf="parent"
