--- a/app/src/main/res/layout/dialog_login_guest.xml
+++ b/app/src/main/res/layout/dialog_login_guest.xml
@@ -60,7 +60,7 @@
 
         <TextView
             android:id="@+id/dialog_guest_btn_login"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="22dp"
@@ -86,8 +86,8 @@
 
         <TextView
             android:id="@+id/dialog_guest_btn_no"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/dialog_btn_no"
