--- a/app/src/main/res/layout/writing_sentence_theme_search.xml
+++ b/app/src/main/res/layout/writing_sentence_theme_search.xml
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:text="테마 선택"
         android:textStyle="bold"
-        android:textSize="19sp"
+        android:textSize="19dp"
         android:textColor="@color/black_two"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,10 +115,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:paddingBottom="12dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:visibility="gone">
-
 
 
             <ImageView
@@ -134,11 +134,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:letterSpacing="-0.02"
-                android:lineSpacingExtra="1sp"
                 android:text="테마를 선택해주세요!"
                 android:textColor="@color/reddish"
-                android:textSize="14sp"
+                android:textSize="13dp"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_theme_search_img_warning"
                 app:layout_constraintStart_toEndOf="@+id/writing_sentence_theme_search_img_warning"
@@ -153,10 +151,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/writing_sentence_theme_search_cl_warning"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:paddingBottom="12dp"
             android:visibility="gone"
             >
 
@@ -165,7 +163,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/soft_green"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:text=""
@@ -176,7 +174,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/soft_green"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:text="'세란'" />
@@ -186,7 +184,7 @@
                 android:layout_height="wrap_content"
                 android:text=" 검색결과"
                 android:textColor="@color/greyish_brown_two"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/writing_sentence_theme_search_tv_keyword"
                 />
@@ -196,7 +194,7 @@
                 android:layout_height="wrap_content"
                 android:text="총 10건"
                 android:textColor="@color/very_light_pink_two"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 />
@@ -245,14 +243,14 @@
             android:layout_marginTop="16dp"
             android:text="검색 결과가 없습니다."
             android:textColor="@color/black"
-            android:textSize="19sp" />
+            android:textSize="19dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="다른 키워드로 검색해보세요!"
             android:textColor="@color/very_light_pink_two"
-            android:textSize="16sp" />
+            android:textSize="16dp" />
 
 
 
@@ -278,7 +276,7 @@
         android:gravity="center"
         android:text="테마 선택하기"
         android:textColor="@color/white"
-        android:textSize="19sp"
+        android:textSize="19dp"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
         app:layout_constraintEnd_toEndOf="@id/gl_right"
         app:layout_constraintStart_toStartOf="@id/gl_left"
