--- a/app/src/main/res/layout/activity_setting_version_info.xml
+++ b/app/src/main/res/layout/activity_setting_version_info.xml
@@ -87,15 +87,14 @@
         android:id="@+id/tv_android_os"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="지원 환경 Android OS 5.0 이상"
-        android:textSize="14sp"
+        android:layout_marginTop="10dp"
+        android:text="지원 환경 Android OS 6.0 이상"
         android:textColor="#a7a7a7"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_version_new"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="10dp"
-        />
+        app:layout_constraintTop_toBottomOf="@id/tv_version_new" />
 
 
 
