--- a/app/src/main/res/layout/activity_curator_info.xml
+++ b/app/src/main/res/layout/activity_curator_info.xml
@@ -89,6 +89,7 @@
                     android:gravity="center_horizontal"
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
+                    android:text="진짜박현주"
                     android:textColor="@color/greyish_brown"
                     android:textSize="17sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -100,12 +101,13 @@
                     android:id="@+id/tx_curators_keyword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="7dp"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/notosanscjkkr_regular"
                     android:gravity="center_horizontal"
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="1sp"
+                    android:text="키워드"
                     android:textColor="#a7a7a7"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="@+id/tv_curator_username"
@@ -117,23 +119,24 @@
                     android:id="@+id/tx_curators_contents"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="1dp"
                     android:fontFamily="@font/notosanscjkkr_demilight"
                     android:gravity="center_horizontal"
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="5sp"
+                    android:text="소개글소개글소개글"
                     android:textColor="#bcbcbc"
                     android:textSize="13sp"
                     app:layout_constraintEnd_toEndOf="@+id/tx_curators_keyword"
                     app:layout_constraintStart_toStartOf="@+id/tx_curators_keyword"
-                    app:layout_constraintTop_toBottomOf="@id/tx_curators_keyword" />
+                    app:layout_constraintTop_toBottomOf="@+id/tx_curators_keyword" />
 
                 <CheckBox
                     android:id="@+id/cb_curator_subs_info"
                     android:layout_width="66dp"
                     android:layout_height="30dp"
-                    android:layout_marginTop="6dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/btn_subscribe"
                     android:button="@null"
