--- a/app/src/main/res/layout/writing_sentence_step1.xml
+++ b/app/src/main/res/layout/writing_sentence_step1.xml
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="문장 쓰기"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textSize="19sp"
         android:textColor="@color/black_two"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,7 +120,7 @@
         android:layout_height="wrap_content"
         android:textSize="19sp"
         android:text="마음에 드는 "
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="@color/greyish_brown"
         android:layout_marginTop="120dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -133,7 +133,7 @@
         android:textSize="19sp"
         android:textColor="@color/soft_green"
         android:text="한 문장"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintTop_toTopOf="@id/writing_sentence_step1_tv_1"
         app:layout_constraintStart_toEndOf="@id/writing_sentence_step1_tv_1"
         />
@@ -143,7 +143,7 @@
         android:layout_height="wrap_content"
         android:textSize="19sp"
         android:text="을 적어주세요!"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="@color/greyish_brown"
         app:layout_constraintTop_toTopOf="@id/writing_sentence_step1_tv_1"
         app:layout_constraintStart_toEndOf="@+id/writing_sentence_step1_tv_2"
@@ -197,7 +197,7 @@
         android:background="@drawable/btn_green"
         android:gravity="center"
         android:text="다음"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="@color/white"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
