--- a/app/src/main/res/layout/writing_sentence_step2.xml
+++ b/app/src/main/res/layout/writing_sentence_step2.xml
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:text="문장 쓰기"
         android:textSize="19sp"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="@color/black_two"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +125,7 @@
         android:layout_height="wrap_content"
         android:textSize="19sp"
         android:text="한 문장"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="@color/soft_green"
         android:layout_marginTop="120dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -138,7 +138,7 @@
         android:textSize="19sp"
         android:textColor="@color/greyish_brown"
         android:text="이 담긴 책을 추가해주세요!"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintTop_toTopOf="@id/writing_sentence_step2_tv_1"
         app:layout_constraintStart_toEndOf="@id/writing_sentence_step2_tv_1"
         />
@@ -150,7 +150,7 @@
         android:text="책 제목"
         android:textColor="@color/greyish_brown"
         android:textSize="15sp"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintStart_toStartOf="@id/gl_left"
         app:layout_constraintTop_toBottomOf="@id/writing_sentence_step2_tv_1"
         android:layout_marginTop="24dp"
@@ -215,7 +215,7 @@
         android:text="작가/옮긴이"
         android:textColor="@color/greyish_brown"
         android:textSize="15sp"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintStart_toStartOf="@id/gl_left"
         app:layout_constraintTop_toBottomOf="@+id/writing_sentence_step2_tv_title" />
 
@@ -241,7 +241,7 @@
         android:text="출판사"
         android:textColor="@color/greyish_brown"
         android:textSize="15sp"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintStart_toStartOf="@id/gl_left"
         app:layout_constraintTop_toBottomOf="@+id/writing_sentence_step2_tv_author" />
 
@@ -270,7 +270,7 @@
         android:background="@drawable/btn_green"
         android:gravity="center"
         android:text="다음"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="@color/white"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
