--- a/app/src/main/res/layout/writing_sentence_step3.xml
+++ b/app/src/main/res/layout/writing_sentence_step3.xml
@@ -51,7 +51,7 @@
         android:text="문장 쓰기"
         android:textSize="19sp"
         android:textColor="@color/black_two"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/gl_top"/>
@@ -134,7 +134,7 @@
         android:layout_height="wrap_content"
         android:textSize="19sp"
         android:text="한 문장"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="@color/soft_green"
         android:layout_marginTop="120dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -147,7 +147,7 @@
         android:textSize="19sp"
         android:textColor="@color/greyish_brown"
         android:text="이 담길 테마를 선택해주세요!"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintTop_toTopOf="@id/writing_sentence_step3_tv_1"
         app:layout_constraintStart_toEndOf="@id/writing_sentence_step3_tv_1"
         />
@@ -175,7 +175,7 @@
         android:layout_height="45dp"
         android:background="@drawable/et_area_green"
         android:gravity="center"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:layout_marginTop="286dp"
         android:text="테마 선택하기"
         android:textColor="@color/soft_green"
@@ -221,7 +221,7 @@
         android:background="@drawable/btn_green"
         android:gravity="center"
         android:text="등록하기"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="@color/white"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
