--- a/app/src/main/res/layout/writing_sentence_theme_search.xml
+++ b/app/src/main/res/layout/writing_sentence_theme_search.xml
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="테마 선택"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textSize="19dp"
         android:textColor="@color/black_two"
         app:layout_constraintEnd_toEndOf="parent"
