--- a/app/src/main/res/layout/writing_theme_step1.xml
+++ b/app/src/main/res/layout/writing_theme_step1.xml
@@ -50,10 +50,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="테마 만들기"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textSize="19sp"
         android:textColor="@color/black_two"
+        android:letterSpacing="-0.02"
+        android:lineSpacingExtra="9sp"
+        tools:text="테마 만들기"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/gl_top"/>
@@ -65,7 +67,7 @@
         android:layout_height="wrap_content"
         android:textSize="19sp"
         android:text="테마 이름"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="@color/soft_green"
         android:layout_marginTop="70dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -78,7 +80,7 @@
         android:textSize="19sp"
         android:textColor="@color/greyish_brown"
         android:text="을 설정해주세요!"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintTop_toTopOf="@id/writing_theme_step1_tv_1"
         app:layout_constraintStart_toEndOf="@id/writing_theme_step1_tv_1"
         />
@@ -154,7 +156,7 @@
         android:layout_height="wrap_content"
         android:textSize="19sp"
         android:text="테마 배경 이미지"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="@color/soft_green"
         android:layout_marginTop="44dp"
         app:layout_constraintTop_toBottomOf="@id/writing_theme_step1_et_sentence"
@@ -167,7 +169,7 @@
         android:textSize="19sp"
         android:textColor="@color/greyish_brown"
         android:text="를 선택해주세요!"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintTop_toTopOf="@id/writing_theme_step1_tv_3"
         app:layout_constraintStart_toEndOf="@id/writing_theme_step1_tv_3"
         />
@@ -218,7 +220,7 @@
         android:background="@drawable/btn_green"
         android:gravity="center"
         android:text="등록하기"
-        android:textStyle="bold"
+        android:textStyle="normal"
         android:textColor="@color/white"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
