--- a/app/src/main/res/layout/onboarding_step2.xml
+++ b/app/src/main/res/layout/onboarding_step2.xml
@@ -40,6 +40,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
+        android:id="@+id/onboarding_2_ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -57,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:text="마음에 드는"
                 android:textColor="@color/black"
-                android:textSize="23sp"
+                android:textSize="23dp"
                 />
         </LinearLayout>
         <LinearLayout
@@ -70,38 +71,48 @@
                 android:textStyle="bold"
                 android:text="큐레이터"
                 android:textColor="@color/soft_green"
-                android:textSize="23sp"
+                android:textSize="23dp"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="를 공유해보세요!"
                 android:textColor="@color/black"
-                android:textSize="23sp"
+                android:textSize="23dp"
                 />
         </LinearLayout>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/onboarding_step2_img_list"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/onboarding_2_img_list"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="260dp"
-        android:visibility="gone"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/onboarding_2_ll">
+        <ImageView
+            android:id="@+id/onboarding_step2_img_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/onboarding_2_img_list"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"/>
 
-    <ImageView
-        android:id="@+id/onboarding_2_img_mongle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/onboarding_2_img_mongle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="410dp"/>
+        <ImageView
+            android:id="@+id/onboarding_2_img_mongle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/onboarding_2_img_mongle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="140dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     <TextView
         android:id="@+id/onboarding_step2_skip"
@@ -110,7 +121,7 @@
         android:text="건너뛰기"
         android:background="@color/white"
         android:textColor="@color/very_light_pink_two"
-        android:textSize="17sp"
+        android:textSize="17dp"
         app:layout_constraintStart_toStartOf="@id/gl_left"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
         android:padding="18dp"
@@ -123,7 +134,7 @@
         android:text="다음"
         android:background="@drawable/btn_green"
         android:textColor="@color/white"
-        android:textSize="17sp"
+        android:textSize="17dp"
         app:layout_constraintEnd_toEndOf="@id/gl_right"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
         android:paddingHorizontal="51dp"
