--- a/app/src/main/res/layout/onboarding_step3.xml
+++ b/app/src/main/res/layout/onboarding_step3.xml
@@ -39,6 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
     <LinearLayout
+        android:id="@+id/onboarding_3_ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -56,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:text="저장한 문장은 "
                 android:textColor="@color/black"
-                android:textSize="23sp"
+                android:textSize="23dp"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -64,14 +65,14 @@
                 android:text="내 서재"
                 android:textStyle="bold"
                 android:textColor="@color/soft_green"
-                android:textSize="23sp"
+                android:textSize="23dp"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="에서"
                 android:textColor="@color/black"
-                android:textSize="23sp"
+                android:textSize="23dp"
                 />
         </LinearLayout>
         <LinearLayout
@@ -83,31 +84,42 @@
                 android:layout_height="wrap_content"
                 android:text="다시 꺼내 볼 수 있어요!"
                 android:textColor="@color/black"
-                android:textSize="23sp"
+                android:textSize="23dp"
                 />
         </LinearLayout>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/onboarding_3_img_bookshelf"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/onboarding_3_img_bookshelf"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="230dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/onboarding_3_ll"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-    <ImageView
-        android:id="@+id/onboarding_3_img_mongle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/onboarding_3_img_mongle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="75dp"
-        android:layout_marginTop="410dp"
-        android:visibility="gone"/>
+        <ImageView
+            android:id="@+id/onboarding_3_img_bookshelf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/onboarding_3_img_bookshelf"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <ImageView
+            android:id="@+id/onboarding_3_img_mongle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/onboarding_3_img_mongle"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="20dp"
+            app:layout_constraintBottom_toBottomOf="@id/onboarding_3_img_bookshelf"
+            android:visibility="gone"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <TextView
         android:id="@+id/onboarding_step3_skip"
@@ -116,7 +128,7 @@
         android:text="건너뛰기"
         android:background="@color/white"
         android:textColor="@color/very_light_pink_two"
-        android:textSize="17sp"
+        android:textSize="17dp"
         app:layout_constraintStart_toStartOf="@id/gl_left"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
         android:padding="18dp"
@@ -129,7 +141,7 @@
         android:text="다음"
         android:background="@drawable/btn_green"
         android:textColor="@color/white"
-        android:textSize="17sp"
+        android:textSize="17dp"
         app:layout_constraintEnd_toEndOf="@id/gl_right"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
         android:paddingHorizontal="51dp"
