--- a/app/src/main/res/layout/onboarding_step4.xml
+++ b/app/src/main/res/layout/onboarding_step4.xml
@@ -43,6 +43,7 @@
         android:layout_marginBottom="170dp"/>
 
     <LinearLayout
+        android:id="@+id/onboarding_4_ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -60,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:text="한 문장으로 풍요로워지는 "
                 android:textColor="@color/white"
-                android:textSize="23sp"
+                android:textSize="23dp"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -68,7 +69,7 @@
                 android:text="몽글"
                 android:textStyle="bold"
                 android:textColor="@color/soft_green"
-                android:textSize="23sp"
+                android:textSize="23dp"
                 />
 
         </LinearLayout>
@@ -81,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:text="지금 바로 시작해보세요!"
                 android:textColor="@color/white"
-                android:textSize="23sp"
+                android:textSize="23dp"
                 />
         </LinearLayout>
     </LinearLayout>
@@ -93,10 +94,11 @@
         android:layout_height="wrap_content"
         android:src="@drawable/onboarding_4_img_mongle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="300dp"
-        android:visibility="gone"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/onboarding_4_ll"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="70dp"
+        android:visibility="visible"/>
 
 
 
@@ -107,7 +109,7 @@
         android:text="몽글 시작하기"
         android:background="@drawable/btn_green"
         android:textColor="@color/white"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="@id/gl_left"
         app:layout_constraintEnd_toEndOf="@id/gl_right"
@@ -123,7 +125,7 @@
         android:text="한 번 둘러보기"
         android:background="@color/white"
         android:textColor="@color/very_light_pink_two"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="@id/onboarding_step4_login"
         app:layout_constraintEnd_toEndOf="@id/onboarding_step4_login"
