[Fix Bugs] 테문 책 검색 디바이더 추가

--- a/app/src/main/res/layout/onboarding_step2.xml
+++ b/app/src/main/res/layout/onboarding_step2.xml
@@ -76,7 +76,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="를 공유해보세요!"
+                android:text="를 구독해보세요!"
                 android:textColor="@color/black"
                 android:textSize="23dp"
                 />
