--- a/app/src/main/res/layout/activity_theme_writing_sentence_book_search.xml
+++ b/app/src/main/res/layout/activity_theme_writing_sentence_book_search.xml
@@ -112,6 +112,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="gone">
         <LinearLayout
+            android:id="@+id/writing_sentence_book_search_ll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -143,6 +144,16 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/very_light_pink_three"
+            android:layout_marginTop="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/writing_sentence_book_search_ll" />
 
 
         <androidx.recyclerview.widget.RecyclerView
