--- a/app/src/main/res/layout/writing_sentence_book_search.xml
+++ b/app/src/main/res/layout/writing_sentence_book_search.xml
@@ -102,7 +102,8 @@
         android:src="@drawable/writing_sentence_theme_6_error_btn_erase"
         app:layout_constraintEnd_toStartOf="@id/writing_sentence_book_search_btn_search"
         app:layout_constraintTop_toTopOf="@id/writing_sentence_book_search_et_search"
-        app:layout_constraintBottom_toBottomOf="@id/writing_sentence_book_search_et_search"/>
+        app:layout_constraintBottom_toBottomOf="@id/writing_sentence_book_search_et_search"
+        android:visibility="invisible"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/writing_sentence_book_search_cl_after"
@@ -113,7 +114,7 @@
         app:layout_constraintEnd_toEndOf="@id/gl_right"
         app:layout_constraintTop_toBottomOf="@id/writing_sentence_book_search_et_search"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone">
+        android:visibility="invisible">
         <LinearLayout
             android:id="@+id/writing_sentence_book_search_ll"
             android:layout_width="wrap_content"
@@ -181,7 +182,7 @@
         app:layout_constraintEnd_toEndOf="@id/gl_right"
         app:layout_constraintTop_toBottomOf="@id/writing_sentence_book_search_et_search"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone">
+        android:visibility="invisible">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
