--- a/app/src/main/res/layout/activity_curator_info.xml
+++ b/app/src/main/res/layout/activity_curator_info.xml
@@ -89,7 +89,7 @@
                     android:gravity="center_horizontal"
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
-                    android:text="진짜박현주"
+                    android:text=" "
                     android:textColor="@color/greyish_brown"
                     android:textSize="17sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +107,7 @@
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="1sp"
-                    android:text="키워드"
+                    android:text=" "
                     android:textColor="#a7a7a7"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="@+id/tv_curator_username"
@@ -125,7 +125,7 @@
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="5sp"
-                    android:text="소개글소개글소개글"
+                    android:text=" "
                     android:textColor="#bcbcbc"
                     android:textSize="13sp"
                     app:layout_constraintEnd_toEndOf="@+id/tx_curators_keyword"
