--- a/app/src/main/res/layout/activity_modify.xml
+++ b/app/src/main/res/layout/activity_modify.xml
@@ -24,6 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="문장 수정하기"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textColor="@color/black_two"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@+id/img_back_sentence_modify"
@@ -71,6 +73,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
                 android:layout_marginTop="10dp"
                 android:textColor="#73c088"
                 android:textSize="13sp"
@@ -81,6 +85,8 @@
                 android:id="@+id/tv_sentence_modify_words_max"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
                 android:text="/280"
                 android:textColor="#cbcbcb"
                 android:textSize="13sp"
@@ -102,6 +108,8 @@
         android:background="@drawable/btn_green"
         android:gravity="center_vertical"
         android:text="수정하기"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="19sp"
