--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -34,6 +34,8 @@
             android:text="프로필 수정"
             android:textColor="@color/black_two"
             android:textSize="19sp"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
             app:layout_constraintBottom_toBottomOf="@+id/activity_profile_btn_out"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -605,12 +607,14 @@
         android:id="@+id/activity_profile_btn_next"
         style="@android:style/ButtonBar"
         android:layout_width="match_parent"
-        android:layout_height="58dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="17dp"
         android:background="@drawable/btn_green"
+        android:fontFamily="@font/notosanscjkkr_regular"
         android:gravity="center_vertical"
+        android:includeFontPadding="false"
         android:padding="15dp"
         android:text="완료"
         android:textAlignment="center"
