--- a/app/src/main/res/layout/activity_sentence_detail_view.xml
+++ b/app/src/main/res/layout/activity_sentence_detail_view.xml
@@ -145,6 +145,8 @@
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="-1sp"
                 android:text=" "
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
                 android:textColor="#a7a7a7"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView18"
@@ -206,6 +208,8 @@
                     android:lineSpacingExtra="7sp"
                     android:singleLine="true"
                     android:text=" "
+                    android:fontFamily="@font/notosanscjkkr_regular"
+                    android:includeFontPadding="false"
                     android:textColor="@color/black"
                     android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -226,6 +230,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="11dp"
+                    android:fontFamily="@font/notosanscjkkr_demilight"
+                    android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="6sp"
                     android:text=" "
@@ -249,6 +255,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="11dp"
+                    android:fontFamily="@font/notosanscjkkr_demilight"
+                    android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="6sp"
                     android:text=" "
