--- a/app/src/main/res/layout/activity_setting_developer_info.xml
+++ b/app/src/main/res/layout/activity_setting_developer_info.xml
@@ -13,6 +13,8 @@
         android:layout_marginHorizontal="16dp"
         android:letterSpacing="-0.04"
         android:text="개발자 정보"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textColor="#292929"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@+id/img_back_setting_developer_info"
@@ -60,7 +62,9 @@
         android:layout_marginTop="71dp"
         android:background="@drawable/tv_shape"
         android:paddingHorizontal="12dp"
-        android:paddingVertical="5dp"
+        android:paddingVertical="4dp"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:text="Plan"
         android:textColor="@color/soft_green"
         android:textSize="15sp"
@@ -73,6 +77,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이예슬"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginRight="18dp"
@@ -85,6 +91,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="유동현"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginTop="13dp"
@@ -97,6 +105,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="유보미"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginLeft="18dp"
@@ -109,10 +119,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Design"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="@color/soft_green"
         android:background="@drawable/tv_shape"
-        android:paddingVertical="5dp"
+        android:paddingVertical="4dp"
         android:paddingHorizontal="12dp"
         android:layout_marginTop="76dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -124,6 +136,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이정인"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginRight="18dp"
@@ -136,6 +150,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="임정은"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginTop="13dp"
@@ -148,6 +164,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="곽민주"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginLeft="18dp"
@@ -161,10 +179,12 @@
         android:layout_height="wrap_content"
         android:text="Front-end"
         android:textSize="15sp"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textColor="@color/soft_green"
         android:background="@drawable/tv_shape"
-        android:paddingVertical="5dp"
-        android:paddingHorizontal="12dp"
+        android:paddingVertical="4dp"
+        android:paddingHorizontal="13dp"
         android:layout_marginTop="76dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -175,6 +195,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이주혁"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginRight="18dp"
@@ -187,6 +209,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="김윤재"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginTop="13dp"
@@ -199,6 +223,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이예슬"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginLeft="18dp"
@@ -211,6 +237,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이소민"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginRight="18dp"
@@ -223,6 +251,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="박세란"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginTop="7dp"
@@ -237,6 +267,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="조현진"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginLeft="9dp"
@@ -250,6 +282,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="최하영"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginLeft="18dp"
@@ -262,10 +296,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back-end"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="@color/soft_green"
         android:background="@drawable/tv_shape"
-        android:paddingVertical="5dp"
+        android:paddingVertical="4dp"
         android:paddingHorizontal="12dp"
         android:layout_marginTop="105dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -277,6 +313,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="김해리"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginTop="13dp"
@@ -292,6 +330,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="박현주"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textSize="15sp"
         android:textColor="#838383"
         android:layout_marginTop="13dp"
