--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:letterSpacing="-0.04"
         android:text="비밀번호 변경"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textColor="#292929"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@+id/img_back_change_password"
@@ -387,8 +389,8 @@
         android:id="@+id/tv_complete_change_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_green"
         android:fontFamily="@font/notosanscjkkr_regular"
