--- a/app/src/main/res/layout/activity_sentence_detail_no_theme.xml
+++ b/app/src/main/res/layout/activity_sentence_detail_no_theme.xml
@@ -145,6 +145,8 @@
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="-1sp"
                 android:text=" "
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
                 android:textColor="#a7a7a7"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView18"
@@ -207,6 +209,8 @@
                     android:lineSpacingExtra="7sp"
                     android:singleLine="true"
                     android:text=" "
+                    android:fontFamily="@font/notosanscjkkr_regular"
+                    android:includeFontPadding="false"
                     android:textColor="@color/black"
                     android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -230,6 +234,8 @@
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="6sp"
                     android:text=" "
+                    android:fontFamily="@font/notosanscjkkr_demilight"
+                    android:includeFontPadding="false"
                     android:textColor="@color/black"
                     android:textSize="13sp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView21"
@@ -253,6 +259,8 @@
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="6sp"
                     android:text=" "
+                    android:fontFamily="@font/notosanscjkkr_demilight"
+                    android:includeFontPadding="false"
                     android:textColor="@color/black"
                     android:textSize="13sp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView22"
