--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -11,30 +11,29 @@
         android:id="@+id/tv_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:letterSpacing="-0.04"
         android:text="설정"
         android:textColor="#292929"
         android:textSize="19sp"
+        app:layout_constraintBottom_toBottomOf="@+id/img_back_setting"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/img_back_setting" />
 
     <ImageView
         android:id="@+id/img_back_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="1dp"
         android:layout_marginTop="4dp"
         android:paddingTop="16dp"
         android:paddingEnd="23dp"
         android:paddingBottom="16dp"
         android:src="@drawable/btn_back"
-        app:layout_constraintBottom_toBottomOf="@id/tv_setting"
-        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/tv_setting"
-        app:layout_constraintTop_toTopOf="@id/tv_setting" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_personal_info"
@@ -43,6 +42,8 @@
         android:layout_marginTop="35dp"
         android:letterSpacing="-0.04"
         android:text="개인 정보"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textColor="#838383"
         android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -65,6 +66,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="프로필 수정"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
             android:textSize="17sp"
             android:textColor="@color/black_two"/>
 
@@ -79,12 +82,12 @@
         android:id="@+id/setting_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="15dp"
         android:gravity="center_vertical"
-        app:layout_constraintTop_toBottomOf="@id/profile_change"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profile_change">
 
         <TextView
             android:id="@+id/tv_setting_account"
@@ -92,26 +95,27 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="계정 설정"
-            android:textSize="17sp"
-            android:textColor="@color/black_two"/>
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
+            android:textColor="@color/black_two"
+            android:textSize="17sp" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/btn_next"
-            />
+            android:src="@drawable/btn_next" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/setting_push"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="15dp"
         android:gravity="center_vertical"
-        app:layout_constraintTop_toBottomOf="@id/setting_account"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/setting_account">
 
         <TextView
             android:id="@+id/tv_setting_push"
@@ -119,8 +123,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="푸쉬 알림 설정"
-            android:textSize="17sp"
-            android:textColor="@color/black_two"/>
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
+            android:textColor="@color/black_two"
+            android:textSize="17sp" />
 
         <com.kyleduo.switchbutton.SwitchButton
             android:id="@+id/sb_setting_push"
@@ -153,6 +159,8 @@
         android:text="문의"
         android:textColor="#838383"
         android:textSize="15sp"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:letterSpacing="-0.04"
         android:layout_marginTop="27dp"
         app:layout_constraintTop_toBottomOf="@id/view_setting_line_1"
@@ -175,6 +183,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="1:1 문의하기"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
             android:textColor="@color/black_two"
             android:textSize="17sp"/>
 
@@ -201,6 +211,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="앱 정보"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textColor="#838383"
         android:textSize="15sp"
         android:letterSpacing="-0.04"
@@ -225,6 +237,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="버전 정보"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
             android:textColor="@color/black_two"
             android:textSize="17sp"
             android:letterSpacing="-0.04"/>
@@ -240,22 +254,24 @@
         android:id="@+id/setting_info_developer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="15dp"
         android:gravity="center_vertical"
-        app:layout_constraintTop_toBottomOf="@id/setting_info_version"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/setting_info_version">
 
         <TextView
             android:id="@+id/tv_setting_info_developer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:letterSpacing="-0.04"
             android:text="개발자 정보"
-            android:textSize="17sp"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
             android:textColor="@color/black_two"
-            android:letterSpacing="-0.04"/>
+            android:textSize="17sp" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -268,22 +284,24 @@
         android:id="@+id/setting_service_policy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="15dp"
         android:gravity="center_vertical"
-        app:layout_constraintTop_toBottomOf="@id/setting_info_developer"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/setting_info_developer">
 
         <TextView
             android:id="@+id/tv_setting_info_service"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:letterSpacing="-0.04"
             android:text="서비스 운영정책"
-            android:textSize="17sp"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
             android:textColor="@color/black_two"
-            android:letterSpacing="-0.04"/>
+            android:textSize="17sp" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -296,22 +314,24 @@
         android:id="@+id/setting_privacy_terms"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="15dp"
         android:gravity="center_vertical"
-        app:layout_constraintTop_toBottomOf="@id/setting_service_policy"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/setting_service_policy">
 
         <TextView
             android:id="@+id/tv_setting_privacy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:letterSpacing="-0.04"
             android:text="개인정보 이용약관"
-            android:textSize="17sp"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
             android:textColor="@color/black_two"
-            android:letterSpacing="-0.04"/>
+            android:textSize="17sp" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -324,12 +344,12 @@
         android:id="@+id/setting_service_terms"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="15dp"
         android:gravity="center_vertical"
-        app:layout_constraintTop_toBottomOf="@id/setting_privacy_terms"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/setting_privacy_terms">
 
         <TextView
             android:id="@+id/tv_setting_service_use"
@@ -338,6 +358,8 @@
             android:layout_weight="1"
             android:letterSpacing="-0.04"
             android:text="서비스 이용약관"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
             android:textColor="@color/black_two"
             android:textSize="17sp" />
 
@@ -352,22 +374,24 @@
         android:id="@+id/setting_opensource"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="15dp"
         android:gravity="center_vertical"
-        app:layout_constraintTop_toBottomOf="@id/setting_service_terms"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/setting_service_terms">
 
         <TextView
             android:id="@+id/tv_setting_opensource"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:letterSpacing="-0.04"
             android:text="오픈소스 라이선스"
-            android:textSize="17sp"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
             android:textColor="@color/black_two"
-            android:letterSpacing="-0.04"/>
+            android:textSize="17sp" />
 
         <ImageView
             android:layout_width="wrap_content"
