--- a/app/src/main/res/layout/activity_setting_version_info.xml
+++ b/app/src/main/res/layout/activity_setting_version_info.xml
@@ -13,6 +13,8 @@
         android:layout_marginHorizontal="16dp"
         android:letterSpacing="-0.04"
         android:text="버전 정보"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:textColor="#292929"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@+id/img_back_setting_version_info"
@@ -37,14 +39,12 @@
         android:id="@+id/img_settings_version_info_img_simbol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="215dp"
         android:src="@drawable/my_settings_version_info_img_simbol"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tv_version_new"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintVertical_bias="0.33"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/tv_version_info"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <ImageView
         android:id="@+id/img_setting_ground_version_info"
@@ -73,6 +73,8 @@
         android:text="현재 버전 1.0"
         android:textSize="14sp"
         android:textColor="@color/soft_green"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:background="@drawable/tv_shape"
         android:paddingHorizontal="14dp"
         android:paddingVertical="4dp"
@@ -88,10 +90,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/notosanscjkkr_regular"
+        android:includeFontPadding="false"
         android:text="지원 환경 Android OS 6.0 이상"
         android:textColor="#a7a7a7"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_version_new" />
