--- a/app/src/main/res/layout/activity_join_step2.xml
+++ b/app/src/main/res/layout/activity_join_step2.xml
@@ -110,7 +110,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="이메일"
                 android:textColor="@color/greyish_brown"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="@+id/activity_join_step2_et_email"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -135,7 +135,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="입력한 이메일로 본인 확인 메일이 전송됩니다."
                 android:textColor="#a7a7a7"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView22"
                 app:layout_constraintEnd_toEndOf="@+id/activity_join_step2_et_email" />
 
@@ -263,7 +263,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="비밀번호"
                 android:textColor="@color/greyish_brown"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="@+id/activity_join_step2_et_pass"
                 app:layout_constraintTop_toBottomOf="@+id/activity_join_step2_img_email_warning" />
 
@@ -288,7 +288,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="영문+숫자 최소 8자리 이상 입력해주세요."
                 android:textColor="#a7a7a7"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView25"
                 app:layout_constraintEnd_toEndOf="@+id/activity_join_step2_et_pass" />
 
@@ -465,7 +465,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="닉네임"
                 android:textColor="@color/greyish_brown"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="@+id/activity_join_step2_et_nickname"
                 app:layout_constraintTop_toBottomOf="@+id/activity_join_step2_img_pass_warning" />
 
@@ -490,7 +490,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="몽글에서의 닉네임을 6자 이내로 입력해주세요."
                 android:textColor="#a7a7a7"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView29"
                 app:layout_constraintEnd_toEndOf="@+id/activity_join_step2_et_nickname" />
 
