--- a/app/src/main/res/layout/fragment_library_sentence.xml
+++ b/app/src/main/res/layout/fragment_library_sentence.xml
@@ -36,6 +36,7 @@
             android:text="저장한 문장"
             android:textAlignment="center"
             android:textColor="@color/radio_button_state"
+            android:textSize="14dp"
             app:layout_constraintBottom_toBottomOf="@id/rg_library_thema"
             app:layout_constraintEnd_toStartOf="@id/rdbtn_making_thema"
             app:layout_constraintTop_toTopOf="@id/rg_library_thema" />
@@ -57,6 +58,7 @@
             android:paddingBottom="5dp"
             android:text="쓴 문장"
             android:textColor="@color/radio_button_state"
+            android:textSize="14dp"
             app:layout_constraintBottom_toBottomOf="@id/rdbtn_saved_sentence"
             app:layout_constraintEnd_toEndOf="@id/rg_library_sentence"
             app:layout_constraintStart_toEndOf="@id/rdbtn_saved_sentence"
