--- a/app/src/main/res/layout/item_today_sentence.xml
+++ b/app/src/main/res/layout/item_today_sentence.xml
@@ -36,7 +36,7 @@
             android:maxLines="2"
             android:text="결국 봄이 언제나 찾아왔지만, 하마터면 오지 않을 뻔했던 봄을 생각하면 마음이 섬찟해진다."
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="16dp"
             app:layout_constraintEnd_toStartOf="@id/guideline2"
             app:layout_constraintStart_toEndOf="@id/guideline"
             app:layout_constraintTop_toTopOf="parent" />
